# contract-mgt-microservice

./: .gitignore  Cargo.toml  README.md  file:contracts.db
migrations/2020-03-16-125856_create_contracts/: down.sql  up.sql
src/: connection.rs  main.rs  schema.rs
src/contracts/: handlers.rs  mod.rs  repository.rs  router.rs
