[package]
name = "contract-mgt-microservice"
version = "0.1.0"
authors = ["harry obaseki <harryobas@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
diesel = {version = "1.4.3", features = ["sqlite"]}
dotenv = "0.15.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.8"
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"



[dependencies.rocket_contrib]
version = "*"
default-features = false
features = ["json"]
